tests/NormalTests/paczka1/fuzzy1/76059982.err
Error in line 4: tfMFj S778 37,2
Error in line 8: tfMFj A740 70,2
Error in line 30: KiJnHchJ A65R 53,3
